# elections-bot

./: README.md  elections-bot.cabal  mafia-bot.cabal  stack.yaml
Mafia/: Bot.hs  Configuration.hs  State.hs  Voting.hs
Mafia/Bot/: Environment.hs  State.hs  Voting.hs
Network/API/Telegram/Bot/: Main.hs
Network/API/Telegram/Bot/Elections/: Configuration.hs  Locales.hs  Process.hs  Server.hs  State.hs
Network/Telegram/API/Bot/: Elections.hs  Main.hs
Network/Telegram/API/Bot/Elections/: Configuration.hs  Locales.hs  Operations.hs  Process.hs  Scores.hs  Server.hs  State.hs
