name:                elections-bot
version:             0.1.0
synopsis:            ...
description:         ...
homepage:            https://github.com/iokasimov/elections-bot
license:             MIT
license-file:        LICENSE
extra-source-files:  CHANGELOG.md
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2019 Murat Kasimov
category:            Data, Control
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/iokasimov/elections-bot.git

library
  exposed-modules:
    Network.API.Telegram.Bot.Elections.Configuration
    Network.API.Telegram.Bot.Elections.Locales
    Network.API.Telegram.Bot.Elections.Process
    Network.API.Telegram.Bot.Elections.Server
    Network.API.Telegram.Bot.Elections.State
  build-depends: base == 4.*, async, tagged, joint, lens, text, warp,
    servant, servant-server, optparse-applicative, stm, wreq, telega
  default-extensions: GeneralizedNewtypeDeriving, NoImplicitPrelude, LambdaCase,
    OverloadedStrings, StandaloneDeriving, TypeApplications, ViewPatterns,
    ScopedTypeVariables, TypeOperators, DataKinds, PackageImports
  ghc-options: -Wall -fno-warn-tabs

executable bot
  main-is: Network/API/Telegram/Bot/Main.hs
  other-modules:
    Network.API.Telegram.Bot.Elections.Configuration
    Network.API.Telegram.Bot.Elections.Locales
    Network.API.Telegram.Bot.Elections.Process
    Network.API.Telegram.Bot.Elections.Server
    Network.API.Telegram.Bot.Elections.State
  build-depends: elections-bot, base == 4.*, async, tagged, joint, lens, text, warp, wai, wai-extra, servant, servant-server, optparse-applicative, stm, wreq, telega
  default-extensions: GeneralizedNewtypeDeriving, NoImplicitPrelude, LambdaCase,
    OverloadedStrings, StandaloneDeriving, TypeApplications, ViewPatterns,
    ScopedTypeVariables, TypeOperators, DataKinds, PackageImports
  ghc-options: -Wall -fno-warn-tabs
