name:                mafia-bot
version:             0.1.0
synopsis:            ...
description:         ...
homepage:            https://github.com/iokasimov/mafia-bot
license:             MIT
license-file:        LICENSE
extra-source-files:  CHANGELOG.md
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2019 Murat Kasimov
category:            Data, Control
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/iokasimov/mafia-bot.git

library
  exposed-modules: 
  build-depends: base == 4.*, async, transformers, lens, text, warp, servant, servant-server,
    telegram-api, http-client, http-client-tls, optparse-applicative, stm, wreq, telega
  default-extensions:  GeneralizedNewtypeDeriving, NoImplicitPrelude, LambdaCase,
    OverloadedStrings, StandaloneDeriving, TypeApplications,
    ScopedTypeVariables, TypeOperators, DataKinds, PackageImports

executable bot
  main-is: Mafia/Bot.hs
  build-depends: base == 4.*, async, transformers, lens, text, warp, servant, servant-server,
    telegram-api, http-client, http-client-tls, optparse-applicative, stm, wreq, telega
  default-extensions:  GeneralizedNewtypeDeriving, NoImplicitPrelude, LambdaCase,
    OverloadedStrings, StandaloneDeriving, TypeApplications,
    ScopedTypeVariables, TypeOperators, DataKinds, PackageImports
